--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ dash_canvas-0.2.0rc1.tar.gz
 Pillow==7.0.0
 pytesseract==0.3.2
 gunicorn==20.0.4
+
+opencv-python== 3.4.2
+numpy== 1.17.2
+skimage== 0.16.2
+tensorflow== 1.15.0
+imutils ==0.5.3
